--- a/style.css
+++ b/style.css
@@ -7,3 +7,16 @@ body {
 .container {
     padding: 3px;
 }
+
+div {
+    align-items: center;
+}
+
+.h3 {
+    background: linear-gradient(transparent 70%, #a7d6ff 70%);
+    text-align: left;
+}
+
+p {
+    text-align: left;
+}
