--- a/style.css
+++ b/style.css
@@ -117,3 +117,15 @@ p {
 .carousel-control-next-icon {
     background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'><path d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/></svg>");
 }
+
+.fa-star {
+    color: orange;
+}
+
+.fav-star {
+    font-size: 1.5rem;
+    position: absolute;
+    right: 5%;
+    bottom: 5%;
+    align-self: end;
+}
